--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
         </div>
     </header>
 
+<!--sekcja z bannerem-->
+
+    <section class="banner">
+        <div class="banner__box">
+            <h1 class="banner__header">Sell More!</h1>
+            <p class="banner__p">Open shop on our platform and increase your sales</p>
+            <a href="#" class="btn">Open your shop</a>
+        </div>
+        <img src="assets/Background.png" alt="" class="banner__img">
+    </section>
 
 
 </body>
