--- a/index.html
+++ b/index.html
@@ -54,6 +54,41 @@
         <img src="assets/Background.png" alt="" class="banner__img">
     </section>
 
+<!--sekcja statystyki-->
+
+    <section class="stat">
+        <div class="container">
+            <h2>The most popular sales platform in country</h2>
+
+            <div class="stat__box">
+
+                <div class="stat__column">
+                    <div class="stat__circle">
+                        <img src="assets/Person.svg" alt="person" class="stat__img">
+                    </div>
+                    <div class="stat__number">100000+</div>
+                    <div class="stat__description">daily entries</div>
+                </div>
+
+                <div class="stat__column">
+                    <div class="stat__circle">
+                        <img src="assets/Eye.svg" alt="eye" class="stat__img">
+                    </div>
+                    <div class="stat__number">2000000+</div>
+                    <div class="stat__description">seen products <br>every day</br></div>
+                </div>
+
+                <div class="stat__column">
+                    <div class="stat__circle">
+                        <img src="assets/Catalog.svg" alt="catalog" class="stat__img">
+                    </div>
+                    <div class="stat__number">10000+</div>
+                    <div class="stat__description">added posts<br>daily</div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
