--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <img src="assets/Person.svg" alt="person" class="stat__img">
                     </div>
                     <div class="stat__number">100000+</div>
-                    <div class="stat__description">daily entries</div>
+                    <div class="stat__text">daily entries</div>
                 </div>
 
                 <div class="stat__column">
@@ -75,7 +75,7 @@
                         <img src="assets/Eye.svg" alt="eye" class="stat__img">
                     </div>
                     <div class="stat__number">2000000+</div>
-                    <div class="stat__description">seen products <br>every day</br></div>
+                    <div class="stat__text">seen products <br>every day</br></div>
                 </div>
 
                 <div class="stat__column">
@@ -83,10 +83,63 @@
                         <img src="assets/Catalog.svg" alt="catalog" class="stat__img">
                     </div>
                     <div class="stat__number">10000+</div>
-                    <div class="stat__description">added posts<br>daily</div>
+                    <div class="stat__text">added posts<br>daily</div>
                 </div>
 
             </div>
+        </div>
+    </section>
+
+<!--sekcja benefits-->
+
+    <section class="benefits">
+        <div class="benefits container__container">
+
+            <div class="benefits__box benefits__box-notebook">
+                <div class="benefits__text">
+                    <h2 class="benefits__title">Be always first</h2>
+                    <p class="benefits__p"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                        enim ad minim veniam.
+                    </p>
+                </div>
+                <div class="benefits__image">
+                    <img src="assets/Macbook.png" alt="macbook"/>
+                </div>
+            </div>
+
+            <div class="benefits__box benefits__box--phone">
+                <div class="benefits__text">
+                    <h2 class="benefits__title">Your shop is <br>where you are!</h2>
+                    <p class="benefits__p"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                        enim ad minim veniam.
+                    </p>
+                </div>
+                <div class="benefits__image">
+                    <img src="assets/iPhone.png" alt="iPhone"/>
+                </div>
+            </div>
+
+            <div class="benefits__boxes">
+                <div class="benefits__box benefits__box--solo">
+                    <div class="benefits__text">
+                        <h2 class="benefits__title">Your shop is<br>where you are!</h2>
+                        <p class="benefits__p"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                            enim ad minim veniam.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="benefits__box benefits__box--image">
+                    <img src="assets/Trumpet.png" alt="trumpet">
+                </div>
+
+            </div>
+
+
+
         </div>
     </section>
 
