pricing, kontakt i email

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta
             name="viewport"
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    >
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>BestShop</title>
 
@@ -138,8 +138,125 @@
 
             </div>
 
+        </div>
+    </section>
 
 
+<!--sekcja pricing-->
+
+
+    <section class="pricing container">
+        <h2>Pricing</h2>
+        <div class="pricing__boxes">
+
+            <div class="pricing__box pricing__box--basic">
+                <div class="pricing__details">
+                    <div class="pricing__name">Basic</div>
+                    <div class="pricing__price">$0</div>
+                </div>
+                <ul class="pricing__items">
+                    <li class="pricing__item">100 MB HDD</li>
+                    <li class="pricing__item">1 Subdomain</li>
+                    <li class="pricing__item">2 E-mails</li>
+                    <li class="pricing__item pricing__item--not">Two years license</li>
+                    <li class="pricing__item pricing__item--not">Full support</li>
+                </ul>
+                <a href="#" class="btn">Begin</a>
+            </div>
+
+
+            <div class="pricing__box pricing__box--professional">
+                <div class="pricing__details">
+                    <div class="pricing__name">Professional</div>
+                    <div class="pricing__price">$25</div>
+                    <div class="pricing__limited">Limited offer</div>
+                </div>
+                <ul class="pricing__items">
+                    <li class="pricing__item">500 MB HDD</li>
+                    <li class="pricing__item">2 Subdomains</li>
+                    <li class="pricing__item">5 E-mails</li>
+                    <li class="pricing__item">One year license</li>
+                    <li class="pricing__item pricing__item--not">Full support</li>
+                </ul>
+                <a href="#" class="btn btn--primary">Begin</a>
+            </div>
+
+
+            <div class="pricing__box pricing__box--premium">
+                <div class="pricing__details">
+                    <div class="pricing__name">Premium</div>
+                    <div class="pricing__price">$60</div>
+                    <div class="pricing__limited">Limited offer</div>
+                </div>
+                <ul class="pricing__items">
+                    <li class="pricing__item">2 GB HDD</li>
+                    <li class="pricing__item">5 Subdomains</li>
+                    <li class="pricing__item">20 E-mails</li>
+                    <li class="pricing__item">Two years license</li>
+                    <li class="pricing__item">Full support</li>
+                </ul>
+                <a href="#" class="btn">Begin</a>
+            </div>
+
+        </div>
+    </section>
+
+
+<!--sekcja kontakt z email-->
+
+
+    <section class="contact container">
+
+        <div class="contact__column">
+
+            <h2 class="contact__title">Any questions?</h2>
+            <p class="contact__text">Leave your email address or call us</p>
+            <div class="contact__details">
+                <a href="mailto:info@bestshop.xyz" class="details__item">
+                    <img src="assets/Mail%20Icon.svg" alt="mail"/>
+                    info@bestshop.xyz
+                </a>
+                <a href="tel:123456789" class="details__item">
+                    <img src="assets/Phone%20Icon.svg" alt="phone"/>
+                    123 456 789
+                </a>
+            </div>
+        </div>
+
+
+        <div class="contact__column">
+
+            <form class="form">
+
+                <div class="form__field">
+                    <label class="form__label" for="name">Name</label>
+                    <input type="text" class="input name" id="name"/>
+                </div>
+
+                <div class="form__field">
+                    <label class="form__label" for="email">E-mail</label>
+                    <input type="email" class="input email" id="email"/>
+                </div>
+
+
+                <div class="form__agreement">
+                    <label class="form__checkbox">
+                        <input type="checkbox"/>
+                        <span class="checkbox"></span>
+                        <p class="agreement__text">I hereby give consent for my personal data included in my
+                            application to be processed for the purposes of the recruitment
+                            process under the European Parliament’s and Council of the
+                            European Union Regulation on the Protection of Natural Persons as
+                            of 27 April 2016, with regard to the processing of personal data
+                            and on the free movement of such data, and repealing Directive
+                            95/46/EC (Data Protection Directive)
+                        </p>
+                    </label>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Send</button>
+
+            </form>
         </div>
     </section>
 
