--- a/index.html
+++ b/index.html
@@ -260,5 +260,26 @@
         </div>
     </section>
 
+
+<!--STOPKA-->
+
+
+
+<footer class="footer">
+
+    <div class="footer__container container">
+
+        <div class="footer__info">
+            <a href="#" class="logo">BestShop</a>
+            <span class="logo__copy">&COPY;2019 BestShop LTD, All Rights Reserved</span>
+        </div>
+
+        <div class="footer__icons">
+            <a href="#"><img src="assets/Twitter.svg" alt="twitter"/></a>
+            <a href="#"><img src="assets/Facebook.svg" alt="facebook"></a>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
